# bakery

./: Cargo.toml  README.md
.github/workflows/: rust.yml
bakery/: Cargo.toml
bakery-derive/: Cargo.toml
bakery-derive/src/: lib.rs
bakery/src/: grammar.pest  lib.rs  recipe.rs  tree.rs
bakery/tests/: test.rec  test.rs  test_bool.rs  test_enum.rs  test_float.rs  test_int.rs  test_list.rs  test_map.rs  test_struct.rs  test_tuple.rs
bakery/tests/common/: mod.rs
