[package]
name = "bakery-derive"
description = "Recipe derive macro for bakery library"
repository = "https://github.com/kingofpayne/bakery"
version = "0.1.0"
authors = ["Olivier Hériveaux"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "serde", "data", "encoding", "binary"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.76"
quote = "1.0.9"
proc-macro2 = "1.0.29"

[lib]
proc-macro = true
