[package]
name = "bakery"
version = "0.1.0"
authors = ["Olivier Hériveaux"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bakery-derive = { path = "../bakery-derive" }
pest = "2.1.3"
pest_derive = "2.1.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
itertools = "0.10.0"
hex-literal = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
