[package]
name = "bakery"
description = "Deserialize binary objects from structured text data files"
repository = "https://github.com/kingofpayne/bakery"
version = "0.1.1"
authors = ["Olivier Hériveaux"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "serde", "data", "encoding", "binary"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bakery-derive = { version = "0.1.0", path = "../bakery-derive" }
pest = "2.1.3"
pest_derive = "2.1.0"
num-bigint = "0.3.1"
num-traits = "0.2.14"
itertools = "0.10.0"
hex-literal = "0.3.1"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
